--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -125,7 +125,7 @@
                                     <a href="/items-list"> Items List </a>
                                 </li>
                                 <li class="active">
-                                    <a href="/item-editor"> Item Editor </a>
+                                    <a href="/items-list/create"> Item Editor </a>
                                 </li>
                             </ul>
                         </li>
