--- a/views/items/items-list.hbs
+++ b/views/items/items-list.hbs
@@ -125,7 +125,7 @@
                                     <a href="items-list"> Items List </a>
                                 </li>
                                 <li>
-                                    <a href="item-editor"> Item Editor </a>
+                                    <a href="/items-list/create"> Item Editor </a>
                                 </li>
                             </ul>
                         </li>
@@ -241,7 +241,8 @@
                 <div class="title-block">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="title"> Items <a href="item-editor" class="btn btn-primary btn-sm rounded-s"> Add
+                            <h3 class="title"> Items <a href="/items-list/create"
+                                                        class="btn btn-primary btn-sm rounded-s"> Add
                                 New </a>
                                 <!--
          -->
