--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -241,7 +241,7 @@
                 <h3 class="title"> {{pageTitle}} <span class="sparkline bar" data-type="bar"></span>
                 </h3>
             </div>
-            <form name="item" action="/item-editor/create" method="POST">
+            <form name="item" action={{action}} method="POST">
                 <div class="card card-block">
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> Name: </label>
