--- a/views/index.hbs
+++ b/views/index.hbs
@@ -119,7 +119,7 @@
                                             <a href="items-list"> Items List </a>
                                         </li>
                                         <li>
-                                            <a href="item-editor"> Item Editor </a>
+                                            <a href="/items-list/create"> Item Editor </a>
                                         </li>
                                     </ul>
                                 </li>                        
