--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -113,7 +113,7 @@
                 <nav class="menu">
                     <ul class="sidebar-menu metismenu" id="sidebar-menu">
                         <li>
-                            <a href="index">
+                            <a href="/index">
                                 <i class="fa fa-home"></i> Dashboard </a>
                         </li>
                         <li class="active open">
