--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -129,6 +129,34 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-file-text-o"></i> Pages <i class="fa arrow"></i>
+                            </a>
+                            <ul class="sidebar-nav">
+                                <li>
+                                    <a href="/admin/login"> Login </a>
+                                </li>
+                                <li>
+                                    <a href="/admin/signup"> Sign Up </a>
+                                </li>
+                                <li>
+                                    <a href="reset.html"> Reset </a>
+                                </li>
+                                <li>
+                                    <a href="error-404.html"> Error 404 App </a>
+                                </li>
+                                <li>
+                                    <a href="error-404-alt.html"> Error 404 Global </a>
+                                </li>
+                                <li>
+                                    <a href="error-500.html"> Error 500 App </a>
+                                </li>
+                                <li>
+                                    <a href="error-500-alt.html"> Error 500 Global </a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
             </div>
