--- a/views/items/items-list.hbs
+++ b/views/items/items-list.hbs
@@ -154,7 +154,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a class="edit" href="item-editor/update/{{id}}">
+                                                    <a class="edit" href="items-list/update/{{id}}">
                                                         <i class="fa fa-pencil"></i>
                                                     </a>
                                                 </li>
