--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -160,13 +160,16 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="active open">
                             <a href="">
-                                <i class="fa fa-file-text-o"></i> Pages <i class="fa arrow"></i>
+                                <i class="fa fa-th-large"></i> Admin Manager <i class="fa arrow"></i>
                             </a>
                             <ul class="sidebar-nav">
                                 <li>
-                                    <a href="/admin/login"> Login </a>
+                                    <a href="/admin-list"> Admin List </a>
+                                </li>
+                                <li>
+                                    <a href="/admin-list/create"> Admin Editor </a>
                                 </li>
                             </ul>
                         </li>
