--- a/views/info/account.hbs
+++ b/views/info/account.hbs
@@ -4,39 +4,27 @@
                 <h3 class="title"> {{pageTitle}} <span class="sparkline bar" data-type="bar"></span>
                 </h3>
             </div>
-            <form name="admin" action={{action}} method="POST">
+            <form name="admin" action={{action}}>
                 <div class="card card-block">
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> Username: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control boxed" placeholder="Please input email address" name="username"
-                                   value={{admin.username}}>
+                            <input type="text" class="form-control boxed" placeholder="" name="username"
+                                   value={{user.username}} readonly="readonly">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> First Name: </label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control boxed" placeholder="" name="first_name"
-                                   value={{admin.first_name}}>
+                                   value="{{user.first_name}}" readonly="readonly">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> Last Name: </label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control boxed" placeholder="" name="last_name"
-                                   value={{admin.last_name}}>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> Password: </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control boxed" placeholder="" name="password"
-                                   value={{admin.password}}>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-10 col-sm-offset-2">
-                            <button type="submit" class="btn btn-primary"> Submit</button>
+                                   value="{{user.last_name}}" readonly="readonly">
                         </div>
                     </div>
                 </div>
