--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -10,7 +10,7 @@
                         <label class="col-sm-2 form-control-label text-xs-right"> Name: </label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control boxed" placeholder="" name="name"
-                                   value={{product.name}}>
+                                   value="{{product.name}}">
                         </div>
                     </div>
                     <div class="form-group row">
