--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -113,7 +113,7 @@
                             {{/if}}
                         </a>
                         <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="/account">
                                 <i class="fa fa-user icon"></i> Profile </a>
                             <a class="dropdown-item" href="#">
                                 <i class="fa fa-bell icon"></i> Notifications </a>
