--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -43,7 +43,7 @@
                         <p class="text-center">LOGIN TO CONTINUE</p>
                         <form id="login-form" action="#" method="POST" novalidate="">
                             {{#if wrongPassword}}
-                            Username or password is in incorrect
+                                <span class="has-error">Username or password is in incorrect</span>
                             {{/if}}
                             <div class="form-group">
                                 <label for="username">Username</label>
