--- a/public/css/app.css
+++ b/public/css/app.css
@@ -979,6 +979,11 @@ textarea {
   font-size: 13px;
   display: block !important; }
 
+span.has-error {
+  color: #FF4444;
+  font-size: 13px;
+  display: block !important; }
+
 .form-group.has-error .form-control-feedback {
   color: #FF4444; }
 
