--- a/views/admin/admin-editor.hbs
+++ b/views/admin/admin-editor.hbs
@@ -4,12 +4,12 @@
                 <h3 class="title"> {{pageTitle}} <span class="sparkline bar" data-type="bar"></span>
                 </h3>
             </div>
-            <form name="admin" action={{action}} method="POST">
+            <form id="admin-register" name="admin" action={{action}} method="POST">
                 <div class="card card-block">
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> Username: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control boxed" placeholder="Please input email address" name="username"
+                            <input type="email" class="form-control boxed" placeholder="Please input email address" name="username"
                                    value={{admin.username}}>
                         </div>
                     </div>
@@ -30,8 +30,15 @@
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label text-xs-right"> Password: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control boxed" placeholder="" name="password"
+                            <input id="password" type="password" class="form-control boxed" placeholder="" name="password"
                                    value={{admin.password}}>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 form-control-label text-xs-right"> Confirm Password: </label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control boxed" placeholder="" name="rePassword"
+                                   value="">
                         </div>
                     </div>
                     <div class="form-group row">
