--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -120,7 +120,7 @@
                             <a class="dropdown-item" href="#">
                                 <i class="fa fa-gear icon"></i> Settings </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/admin/login">
+                            <a class="dropdown-item" href="/admin/logout">
                                 <i class="fa fa-power-off icon"></i> Logout </a>
                         </div>
                     </li>
