--- a/views/user/user-detail.hbs
+++ b/views/user/user-detail.hbs
@@ -4,61 +4,41 @@
                 <h3 class="title"> {{pageTitle}} <span class="sparkline bar" data-type="bar"></span>
                 </h3>
             </div>
-            <h4>Account Details</h4>
-            <form id="account-update" action="account/update" method="POST">
+            <form action={{action}} >
                 <div class="card card-block">
                     <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> Username: </label>
+                        <label class="col-sm-2 form-control-label text-xs-right"> Email: </label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control boxed" placeholder="" name="username"
-                                   value={{user.username}} disabled>
+                            <input type="text" class="form-control boxed" placeholder="" name="email"
+                                   value="{{eachUser.email}}" disabled>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> First Name: </label>
+                        <label class="col-sm-2 form-control-label text-xs-right"> Firstname: </label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control boxed" placeholder="" name="first_name"
-                                   value="{{user.first_name}}" required>
+                                   value="{{eachUser.first_name}}" disabled>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> Last Name: </label>
+                        <label class="col-sm-2 form-control-label text-xs-right"> Lastname: </label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control boxed" placeholder="" name="last_name"
-                                   value="{{user.last_name}}" required>
+                                   value="{{eachUser.last_name}}" disabled>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-sm-10 col-sm-offset-2">
-                            <button type="submit" class="btn btn-primary"> Update</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <h4>Password change</h4>
-            <form id="change-password-form" action="account/change-password" method="POST">
-                <div class="card card-block">
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> Current password: </label>
+                        <label class="col-sm-2 form-control-label text-xs-right"> Phone: </label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control boxed" placeholder="Current Password" name="password" required>
+                            <input type="text" class="form-control boxed" placeholder="" name="phone"
+                                   value="{{eachUser.phone}}" disabled>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> New password: </label>
+                        <label class="col-sm-2 form-control-label text-xs-right"> Address: </label>
                         <div class="col-sm-10">
-                            <input id="new-password" type="password" class="form-control boxed" placeholder="New Password" name="newPassword" required>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label text-xs-right"> Confirm password: </label>
-                        <div class="col-sm-10">
-                            <input type="password" class="form-control boxed" placeholder="Confirm Password" name="rePassword" required>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-10 col-sm-offset-2">
-                            <button type="submit" class="btn btn-primary"> Save changes</button>
+                            <input type="text" class="form-control boxed" placeholder="" name="address"
+                                   value="{{eachUser.address}}" disabled>
                         </div>
                     </div>
                 </div>
