Update Product Create form
- Update Product Create form to suit new DB structure
- Can only add 1 image per product

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -161,7 +161,7 @@
                                         <a href="/items-list"> Items List </a>
                                     </li>
                                     <li class="active">
-                                        <a href="/items-list/create"> Item Editor </a>
+                                        <a href="/items-list/create"> Create Product </a>
                                     </li>
                                 </ul>
                             </li>
@@ -174,7 +174,7 @@
                                         <a href="/admin-list"> Admin List </a>
                                     </li>
                                     <li>
-                                        <a href="/admin-list/create"> Admin Editor </a>
+                                        <a href="/admin-list/create"> Create Admin </a>
                                     </li>
                                 </ul>
                             </li>
