Update text for Sidebar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -158,7 +158,7 @@
                                 </a>
                                 <ul class="sidebar-nav">
                                     <li>
-                                        <a href="/items-list"> Items List </a>
+                                        <a href="/items-list"> Product List </a>
                                     </li>
                                     <li class="active">
                                         <a href="/items-list/create"> Create Product </a>
