Update Product edit
Edit a Product results in edit its image in Image table

--- a/views/items/item-editor.hbs
+++ b/views/items/item-editor.hbs
@@ -46,7 +46,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 form-control-label text-xs-right"> Image URL: </label>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control boxed" placeholder="" name="img" value={{product.img}}>      
+                    <input type="text" class="form-control boxed" placeholder="" name="img" value={{image.url}}>      
                 </div>
             </div>
             <div class="form-group row">
