Update Catalog Manager

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -120,7 +120,7 @@
                             <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <a class="dropdown-item" href="/account">
                                     <i class="fa fa-user icon"></i> Profile </a>
-                                <a class="dropdown-item" href="/items-list/test">
+                                <a class="dropdown-item" href="#">
                                     <i class="fa fa-bell icon"></i> Notifications </a>
                                 <a class="dropdown-item" href="#">
                                     <i class="fa fa-gear icon"></i> Settings </a>
@@ -151,6 +151,19 @@
                             <li>
                                 <a href="/dashboard">
                                     <i class="fa fa-home"></i> Dashboard </a>
+                            </li>
+                            <li class="active open">
+                                <a href="">
+                                    <i class="fa fa-th-large"></i> Catalog Manager <i class="fa arrow"></i>
+                                </a>
+                                <ul class="sidebar-nav">
+                                    <li>
+                                        <a href="/catalog-list"> Catalog List </a>
+                                    </li>
+                                    <li class="active">
+                                        <a href="/catalog-list/create"> Create Catalog </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="active open">
                                 <a href="">
