Update Total Chart And Bill List

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -120,10 +120,6 @@
                             <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <a class="dropdown-item" href="/account">
                                     <i class="fa fa-user icon"></i> Profile </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fa fa-bell icon"></i> Notifications </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fa fa-gear icon"></i> Settings </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/logout">
                                     <i class="fa fa-power-off icon"></i> Logout </a>
@@ -143,7 +139,7 @@
                                 <span class="l l4"></span>
                                 <span class="l l5"></span>
                             </div>
-                            Modular Admin
+                            TNKStore Admin
                         </div>
                     </div>
                     <nav class="menu">
@@ -198,6 +194,16 @@
                                 <ul class="sidebar-nav">
                                     <li>
                                         <a href="/user-list"> User List </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="active open">
+                                <a href="">
+                                    <i class="fa fa-th-large"></i> Bill Manager <i class="fa arrow"></i>
+                                </a>
+                                <ul class="sidebar-nav">
+                                    <li>
+                                        <a href="/bill-list"> Bill List </a>
                                     </li>
                                 </ul>
                             </li>
