--- a/views/bill/bill-editor.hbs
+++ b/views/bill/bill-editor.hbs
@@ -3,17 +3,58 @@
         <h3 class="title"> {{pageTitle}} <span class="sparkline bar" data-type="bar"></span>
         </h3>
     </div>
-    <form id="catalog-update" name="item" action={{action}} method="POST">
+    <form name="item" action={{action}} method="POST">
         <div class="card card-block">
             <div class="form-group row">
-                <label class="col-sm-2 form-control-label text-xs-right"> Name: </label>
+                <label class="col-sm-2 form-control-label text-xs-right"> Number: </label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control boxed" placeholder="" name="name" value="{{catalog.name}}" required>
+                    <input type="text" class="form-control boxed" placeholder="" name="number" disabled value={{bill.id}}>
                 </div>
             </div>
             <div class="form-group row">
+                <label class="col-sm-2 form-control-label text-xs-right"> User: </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control boxed" placeholder="" name="user" value="{{bill.user.email}}"
+                        disabled>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label text-xs-right"> Payment: </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control boxed" placeholder="" name="payment"
+                        value="{{bill.payment.name}}" disabled>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label text-xs-right"> Status: </label>
+                <div class="col-sm-10">
+                    <select class="c-select form-control boxed" name="status">
+                        <option selected value="{{bill.status.id}}">{{bill.status.name}}</option>
+                        {{#each status}}
+                        <option value="{{id}}">{{name}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+            </div>
+            {{#each detail}}
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label text-xs-right"> Product: </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control boxed" placeholder=""
+                        value="{{product.name}}" disabled>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label text-xs-right"> Amount: </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control boxed" placeholder=""
+                        value="{{amount}}" disabled>
+                </div>
+            </div>
+            {{/each}}
+            <div class="form-group row">
                 <div class="col-sm-10 col-sm-offset-2">
-                    <button type="submit" class="btn btn-primary"> Submit </button>
+                    <button type="submit" class="btn btn-primary"> Submit</button>
                 </div>
             </div>
         </div>
@@ -168,7 +209,7 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-< div class="modal fade" id="confirm-modal">
+<div class="modal fade" id="confirm-modal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -186,7 +227,7 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
+</div>
+< !-- /.modal -->
     </div>
-    < !-- /.modal -->
-        </div>
-        </div>
+    </div>
