--- a/views/bill/bill-list.hbs
+++ b/views/bill/bill-list.hbs
@@ -4,9 +4,7 @@
                 <div class="title-block">
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="title"> Catalog <a href="/catalog-list/create"
-                                                        class="btn btn-primary btn-sm rounded-s"> Add
-                                New </a>
+                            <h3 class="title"> Bill
                                 <!--
          -->
                                 <div class="action dropdown">
@@ -22,7 +20,7 @@
                                     </div>
                                 </div>
                             </h3>
-                            <p class="title-description"> List of catalog </p>
+                            <p class="title-description"> List of bill </p>
                         </div>
                     </div>
                 </div>
@@ -49,16 +47,46 @@
                                     <span></span>
                                 </label>
                             </div>
+                            <!--<div class="item-col item-col-header fixed item-col-img md">
+                                <div>
+                                    <span>Image</span>
+                                </div>
+                            </div>-->
                             <div class="item-col item-col-header item-col-title">
                                 <div>
-                                    <span>Name</span>
+                                    <span>Number</span>
+                                </div>
+                            </div>
+                            <div class="item-col item-col-header item-col-sales">
+                                <div>
+                                    <span>User</span>
+                                </div>
+                            </div>
+                            <div class="item-col item-col-header item-col-stats">
+                                <div class="no-overflow">
+                                    <span>Total</span>
+                                </div>
+                            </div>
+                            <div class="item-col item-col-header item-col-category">
+                                <div class="no-overflow">
+                                    <span>Payment</span>
+                                </div>
+                            </div>
+                            <!--<div class="item-col item-col-header item-col-author">
+                                <div class="no-overflow">
+                                    <span>Status</span>
+                                </div>
+                            </div>-->
+                            <div class="item-col item-col-header item-col-date">
+                                <div>
+                                    <span>Status</span>
                                 </div>
                             </div>
                             <div class="item-col item-col-header fixed item-col-actions-dropdown">
                             </div>
                         </div>
                     </li>
-                    {{#each catalog}}
+                    {{#each bills}}
                         <li class="item">
                             <div class="item-row">
                                 <div class="item-col fixed item-col-check">
@@ -67,13 +95,44 @@
                                         <span></span>
                                     </label>
                                 </div>
+                                <!--<div class="item-col fixed item-col-img md">
+                                    <a href="/items-list/update/{{id}}">
+                                        <div class="item-img rounded" style="background-image: url({{img}})"></div>
+                                    </a>
+                                </div>-->
                                 <div class="item-col fixed pull-left item-col-title">
-                                    <div class="item-heading">Name</div>
+                                    <div class="item-heading">Number</div>
                                     <div>
-                                        <a href="catalog-list/update/{{id}}" class="">
-                                            <h4 class="item-title"> {{name}} </h4>
+                                        <a href="/bill-list/update/{{id}}" class="">
+                                            <h4 class="item-title"> {{id}} </h4>
                                         </a>
                                     </div>
+                                </div>
+                                <div class="item-col item-col-sales">
+                                    <div class="item-heading">User</div>
+                                    <div> {{user.email}} </div>
+                                </div>
+                                <div class="item-col item-col-stats no-overflow">
+                                    <div class="item-heading">Total</div>
+                                    <div class="no-overflow">
+                                        <div> {{total}}₫</div>
+                                    </div>
+                                </div>
+                                <div class="item-col item-col-category no-overflow">
+                                    <div class="item-heading">Payment</div>
+                                    <div class="no-overflow">
+                                        <a>{{payment.name}}</a>
+                                    </div>
+                                </div>
+                                <!--<div class="item-col item-col-author">
+                                    <div class="item-heading">Status</div>
+                                    <div class="no-overflow">
+                                        <a>{{status.name}}</a>
+                                    </div>
+                                </div>-->
+                                <div class="item-col item-col-date">
+                                    <div class="item-heading">Status</div>
+                                    <div class="no-overflow"> {{status.name}}</div>
                                 </div>
                                 <div class="item-col fixed item-col-actions-dropdown">
                                     <div class="item-actions-dropdown">
@@ -88,7 +147,7 @@
                                         <div class="item-actions-block">
                                             <ul class="item-actions-list">
                                                 <li>
-                                                    <a class="edit" href="catalog-list/update/{{id}}">
+                                                    <a class="edit" href="bill-list/update/{{id}}">
                                                         <i class="fa fa-pencil"></i>
                                                     </a>
                                                 </li>
