Fix 'Locked User'

--- a/views/user/user-list.hbs
+++ b/views/user/user-list.hbs
@@ -88,7 +88,7 @@
                                 <div class="item-col fixed pull-left item-col-title">
                                     <div class="item-heading">Username</div>
                                     <div>
-                                        <a href="/user-list/{{id}}" class="">
+                                        <a href="/user-list/detail/{{id}}" class="">
                                             <h4 class="item-title"> {{email}} </h4>
                                         </a>
                                     </div>
